# kernelscript

./: BUILTINS.md  README.md  SPEC.md
examples/: extern_kfunc_demo.ks  perf_cache_miss.ks  perf_page_fault.ks  ringbuf_on_event_demo.ks  sched_ext_simple.ks  sysctl_demo.ks
src/: ast.ml  ebpf_c_codegen.ml  ir.ml  ir_generator.ml  parser.mly  stdlib.ml  type_checker.ml  userspace_codegen.ml
tests/: dune  test_context_field_types.ml  test_definition_order.ml  test_object_allocation.ml  test_parser.ml  test_perf_event_attach.ml  test_program_ref.ml  test_ringbuf.ml  test_string_codegen.ml  test_string_literal_bugs.ml  test_struct_ops.ml  test_sysctl.ml  test_userspace_for_codegen.ml  test_userspace_skeleton_header.ml
