(library
 (name test_utils)
 (modules test_utils)
 (libraries kernelscript))

(executable
 (name test_ringbuf)
 (modules test_ringbuf)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_test_attribute)
 (modules test_test_attribute)
 (libraries kernelscript alcotest))

(executable
 (name test_btf_binary_parser)
 (modules test_btf_binary_parser)
 (libraries kernelscript alcotest))

(executable
 (name test_extern)
 (modules test_extern)
 (libraries kernelscript alcotest str))

(executable
 (name test_include)
 (modules test_include)
 (libraries kernelscript alcotest str))



(executable
 (name test_lexer)
 (modules test_lexer)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_ir_patterns)
 (modules test_ir_patterns)
 (libraries kernelscript alcotest))

(executable
 (name test_ast)
 (modules test_ast)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_type_checker)
 (modules test_type_checker)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_symbol_table)
 (modules test_symbol_table)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_maps)
 (modules test_maps)
 (libraries kernelscript alcotest))

(executable
 (name test_object_allocation)
 (modules test_object_allocation)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_safety_checker)
 (modules test_safety_checker)
 (libraries kernelscript alcotest))

(executable
 (name test_map_operations)
 (modules test_map_operations)
 (libraries kernelscript alcotest))

(executable
 (name test_evaluator)
 (modules test_evaluator)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_compound_index_assignment)
 (modules test_compound_index_assignment)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_iflet)
 (modules test_iflet)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_dynptr_bridge)
 (modules test_dynptr_bridge)
 (libraries kernelscript alcotest))

(executable
 (name test_global_var_ordering)
 (modules test_global_var_ordering)
 (libraries kernelscript alcotest))

(executable
 (name test_string_to_array_unification)
 (modules test_string_to_array_unification)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_truthy_falsy)
 (modules test_truthy_falsy)
 (libraries kernelscript alcotest test_utils))



(executable
 (public_name test_ir)
 (name test_ir)
 (modules test_ir)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_analysis)
 (name test_ir_analysis)
 (modules test_ir_analysis)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ir_function_system)
 (name test_ir_function_system)
 (modules test_ir_function_system)
 (libraries kernelscript alcotest))

(executable
 (public_name test_ebpf_c_codegen)
 (name test_ebpf_c_codegen)
 (modules test_ebpf_c_codegen)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_syntax)
 (modules test_map_syntax)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_map_assignment)
 (modules test_map_assignment)
 (libraries kernelscript alcotest))

(executable
 (name test_map_integration)
 (modules test_map_integration)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace)
 (modules test_userspace)
 (libraries kernelscript alcotest str))

(executable
 (name test_map_flags)
 (modules test_map_flags)
 (libraries kernelscript alcotest))

(executable
 (name test_userspace_maps)
 (modules test_userspace_maps)
 (libraries kernelscript alcotest str unix test_utils))

(executable
 (name test_comment_positions)
 (modules test_comment_positions)
 (libraries kernelscript alcotest))

(executable
 (name test_for_statements)
 (modules test_for_statements)
 (libraries kernelscript alcotest))

(executable
 (name test_config)
 (modules test_config)
 (libraries kernelscript alcotest str))

(executable
 (name test_break_continue)
 (modules test_break_continue)
 (libraries kernelscript alcotest str))

(executable
 (name test_bpf_loop_callbacks)
 (modules test_bpf_loop_callbacks)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_for_codegen)
 (modules test_userspace_for_codegen)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_userspace_statements)
 (modules test_userspace_statements)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_return_value_propagation)
 (modules test_return_value_propagation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_stdlib)
 (modules test_stdlib)
 (libraries kernelscript alcotest))

(executable
 (name test_config_struct_generation)
 (modules test_config_struct_generation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_array_literals)
 (modules test_array_literals)
 (libraries kernelscript alcotest str))

(executable
 (name test_array_init)
 (modules test_array_init)
 (libraries kernelscript alcotest))

(executable
 (name test_config_validation)
 (modules test_config_validation)
 (libraries kernelscript alcotest str))

(executable
 (name test_userspace_struct_flexibility)
 (modules test_userspace_struct_flexibility)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_struct_field_access)
 (modules test_struct_field_access)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_struct_initialization)
 (modules test_struct_initialization)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_program_ref)
 (modules test_program_ref)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_function_pointers)
 (modules test_function_pointers)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_string_type)
 (modules test_string_type)
 (libraries kernelscript alcotest))

(executable
 (name test_string_codegen)
 (modules test_string_codegen)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_ebpf_string_generation)
 (modules test_ebpf_string_generation)
 (libraries kernelscript alcotest str unix))

(executable
 (name test_userspace_skeleton_header)
 (modules test_userspace_skeleton_header)
 (libraries kernelscript alcotest str))

(executable
 (name test_match)
 (modules test_match)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_pinned_globals)
 (modules test_pinned_globals)
 (libraries kernelscript alcotest str))



(executable
 (name test_string_struct_fixes)
 (modules test_string_struct_fixes)
 (libraries kernelscript alcotest str unix))

(executable
 (public_name test_error_handling)  
 (name test_error_handling)
 (modules test_error_handling)
 (libraries kernelscript alcotest))

(executable
 (name test_struct_ops)
 (modules test_struct_ops)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_pointer_syntax)
 (modules test_pointer_syntax)
 (libraries kernelscript alcotest str))

(executable
 (name test_address_of_user_types)
 (modules test_address_of_user_types)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_kfunc_attribute)
 (modules test_kfunc_attribute)
 (libraries kernelscript alcotest str))

(executable
 (name test_private_attribute)
 (modules test_private_attribute)
 (libraries kernelscript alcotest str))


(executable
 (name test_function_scope)
 (modules test_function_scope)
 (libraries kernelscript alcotest))

(executable
(public_name test_integer_literal)
(name test_integer_literal)
(libraries kernelscript alcotest str)
(modules test_integer_literal))

(executable
 (name test_string_literal_bugs)
 (modules test_string_literal_bugs)
 (libraries kernelscript alcotest str))

(executable
 (name test_return_path_analysis)
 (modules test_return_path_analysis)
 (libraries kernelscript alcotest))

(executable
 (name test_enum)
 (modules test_enum)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_nested_if_codegen)
 (modules test_nested_if_codegen)
 (libraries kernelscript alcotest str))

(executable
 (name test_type_alias)
 (modules test_type_alias)
 (libraries kernelscript alcotest str))

(executable
 (name test_const_variables)
 (modules test_const_variables)
 (libraries kernelscript alcotest))

(executable
 (name test_global_var)
 (modules test_global_var)
 (libraries kernelscript alcotest test_utils))

(executable
 (name test_function_validation)
 (modules test_function_validation)
 (libraries kernelscript alcotest))

(executable
 (name test_tail_call)
 (modules test_tail_call)
 (libraries kernelscript alcotest))

(executable
 (name test_context_field_types)
 (modules test_context_field_types)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_named_returns)
 (modules test_named_returns)
 (libraries kernelscript alcotest))

(executable
 (name test_import_system)
 (modules test_import_system)
 (libraries kernelscript alcotest unix str))

(executable
 (name test_tracepoint)
 (modules test_tracepoint)
 (libraries kernelscript alcotest unix str))

(executable
 (name test_probe)
 (modules test_probe)
 (libraries kernelscript alcotest unix str))

(executable
 (name test_detach_api)
 (modules test_detach_api)
 (libraries kernelscript alcotest test_utils str))

(executable
 (name test_perf_event_attach)
 (modules test_perf_event_attach)
 (libraries kernelscript alcotest test_utils str unix))

(executable
 (name test_tc)
 (modules test_tc)
 (libraries kernelscript alcotest unix str))

(executable
 (name test_exec)
 (modules test_exec)
 (libraries kernelscript alcotest unix str))

(executable
 (name test_void_functions)
 (modules test_void_functions)
 (libraries kernelscript alcotest str test_utils))

(executable
 (name test_definition_order)
 (modules test_definition_order)
 (libraries kernelscript alcotest))

(executable
 (name test_sysctl)
 (modules test_sysctl)
 (libraries kernelscript alcotest str))



; Top-level alias to build all tests
(alias
 (name tests)
 (deps
  test_ringbuf.exe
  test_test_attribute.exe
  test_btf_binary_parser.exe
  test_extern.exe
  test_include.exe
  test_lexer.exe
  test_ir_patterns.exe
  test_ast.exe
  test_parser.exe
  test_type_checker.exe
  test_symbol_table.exe
  test_maps.exe
  test_object_allocation.exe
  test_safety_checker.exe
  test_map_operations.exe
  test_evaluator.exe
  test_compound_index_assignment.exe
  test_iflet.exe
  test_dynptr_bridge.exe
  test_global_var_ordering.exe
  test_string_to_array_unification.exe
  test_truthy_falsy.exe
  test_ir.exe
  test_ir_analysis.exe
  test_ir_function_system.exe
  test_ebpf_c_codegen.exe
  test_map_syntax.exe
  test_map_assignment.exe
  test_map_integration.exe
  test_userspace.exe
  test_map_flags.exe
  test_userspace_maps.exe
  test_comment_positions.exe
  test_for_statements.exe
  test_config.exe
  test_break_continue.exe
  test_bpf_loop_callbacks.exe
  test_userspace_for_codegen.exe
  test_userspace_statements.exe
  test_return_value_propagation.exe
  test_stdlib.exe
  test_config_struct_generation.exe
  test_array_literals.exe
  test_array_init.exe
  test_config_validation.exe
  test_userspace_struct_flexibility.exe
  test_struct_field_access.exe
  test_struct_initialization.exe
  test_program_ref.exe
  test_function_pointers.exe
  test_string_type.exe
  test_string_codegen.exe
  test_ebpf_string_generation.exe
  test_userspace_skeleton_header.exe
  test_match.exe
  test_pinned_globals.exe
  test_string_struct_fixes.exe
  test_error_handling.exe
  test_struct_ops.exe
  test_pointer_syntax.exe
  test_address_of_user_types.exe
  test_kfunc_attribute.exe
  test_private_attribute.exe
  test_function_scope.exe
  test_integer_literal.exe
  test_string_literal_bugs.exe
  test_return_path_analysis.exe
  test_enum.exe
  test_nested_if_codegen.exe
  test_type_alias.exe
  test_const_variables.exe
  test_global_var.exe
  test_function_validation.exe
  test_tail_call.exe
  test_context_field_types.exe
  test_named_returns.exe
  test_import_system.exe
  test_tracepoint.exe
  test_probe.exe
  test_detach_api.exe
  test_perf_event_attach.exe
  test_tc.exe
  test_exec.exe
  test_void_functions.exe
  test_definition_order.exe
  test_sysctl.exe))

; Runtest rules to actually execute the tests
(rule
 (alias runtest)
 (action (run ./test_ringbuf.exe)))

(rule
 (alias runtest)
 (action (run ./test_test_attribute.exe)))

(rule
 (alias runtest)
 (action (run ./test_btf_binary_parser.exe)))

(rule
 (alias runtest)
 (action (run ./test_extern.exe)))

(rule
 (alias runtest)
 (action (run ./test_include.exe)))

(rule
 (alias runtest)
 (action (run ./test_lexer.exe)))

(rule
 (alias runtest)
 (action (run ./test_ir_patterns.exe)))

(rule
 (alias runtest)
 (action (run ./test_ast.exe)))

(rule
 (alias runtest)
 (action (run ./test_parser.exe)))

(rule
 (alias runtest)
 (action (run ./test_type_checker.exe)))

(rule
 (alias runtest)
 (action (run ./test_symbol_table.exe)))

(rule
 (alias runtest)
 (action (run ./test_maps.exe)))

(rule
 (alias runtest)
 (action (run ./test_object_allocation.exe)))

(rule
 (alias runtest)
 (action (run ./test_safety_checker.exe)))

(rule
 (alias runtest)
 (action (run ./test_map_operations.exe)))

(rule
 (alias runtest)
 (action (run ./test_evaluator.exe)))

(rule
 (alias runtest)
 (action (run ./test_compound_index_assignment.exe)))

(rule
 (alias runtest)
 (action (run ./test_iflet.exe)))

(rule
 (alias runtest)
 (action (run ./test_dynptr_bridge.exe)))

(rule
 (alias runtest)
 (action (run ./test_global_var_ordering.exe)))

(rule
 (alias runtest)
 (action (run ./test_string_to_array_unification.exe)))

(rule
 (alias runtest)
 (action (run ./test_truthy_falsy.exe)))

(rule
 (alias runtest)
 (action (run ./test_ir.exe)))

(rule
 (alias runtest)
 (action (run ./test_ir_analysis.exe)))

(rule
 (alias runtest)
 (action (run ./test_ir_function_system.exe)))

(rule
 (alias runtest)
 (action (run ./test_ebpf_c_codegen.exe)))

(rule
 (alias runtest)
 (action (run ./test_map_syntax.exe)))

(rule
 (alias runtest)
 (action (run ./test_map_assignment.exe)))

(rule
 (alias runtest)
 (action (run ./test_map_integration.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace.exe)))

(rule
 (alias runtest)
 (action (run ./test_map_flags.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace_maps.exe)))

(rule
 (alias runtest)
 (action (run ./test_comment_positions.exe)))

(rule
 (alias runtest)
 (action (run ./test_for_statements.exe)))

(rule
 (alias runtest)
 (action (run ./test_config.exe)))

(rule
 (alias runtest)
 (action (run ./test_break_continue.exe)))

(rule
 (alias runtest)
 (action (run ./test_bpf_loop_callbacks.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace_for_codegen.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace_statements.exe)))

(rule
 (alias runtest)
 (action (run ./test_return_value_propagation.exe)))

(rule
 (alias runtest)
 (action (run ./test_stdlib.exe)))

(rule
 (alias runtest)
 (action (run ./test_config_struct_generation.exe)))

(rule
 (alias runtest)
 (action (run ./test_array_literals.exe)))

(rule
 (alias runtest)
 (action (run ./test_array_init.exe)))

(rule
 (alias runtest)
 (action (run ./test_config_validation.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace_struct_flexibility.exe)))

(rule
 (alias runtest)
 (action (run ./test_struct_field_access.exe)))

(rule
 (alias runtest)
 (action (run ./test_struct_initialization.exe)))

(rule
 (alias runtest)
 (action (run ./test_program_ref.exe)))

(rule
 (alias runtest)
 (action (run ./test_function_pointers.exe)))

(rule
 (alias runtest)
 (action (run ./test_string_type.exe)))

(rule
 (alias runtest)
 (action (run ./test_string_codegen.exe)))

(rule
 (alias runtest)
 (action (run ./test_ebpf_string_generation.exe)))

(rule
 (alias runtest)
 (action (run ./test_userspace_skeleton_header.exe)))

(rule
 (alias runtest)
 (action (run ./test_match.exe)))

(rule
 (alias runtest)
 (action (run ./test_pinned_globals.exe)))

(rule
 (alias runtest)
 (action (run ./test_string_struct_fixes.exe)))

(rule
 (alias runtest)
 (action (run ./test_error_handling.exe)))

(rule
 (alias runtest)
 (action (run ./test_struct_ops.exe)))

(rule
 (alias runtest)
 (action (run ./test_pointer_syntax.exe)))

(rule
 (alias runtest)
 (action (run ./test_address_of_user_types.exe)))

(rule
 (alias runtest)
 (action (run ./test_kfunc_attribute.exe)))

(rule
 (alias runtest)
 (action (run ./test_private_attribute.exe)))

(rule
 (alias runtest)
 (action (run ./test_function_scope.exe)))

(rule
 (alias runtest)
 (action (run ./test_integer_literal.exe)))

(rule
 (alias runtest)
 (action (run ./test_string_literal_bugs.exe)))

(rule
 (alias runtest)
 (action (run ./test_return_path_analysis.exe)))

(rule
 (alias runtest)
 (action (run ./test_enum.exe)))

(rule
 (alias runtest)
 (action (run ./test_nested_if_codegen.exe)))

(rule
 (alias runtest)
 (action (run ./test_type_alias.exe)))

(rule
 (alias runtest)
 (action (run ./test_const_variables.exe)))

(rule
 (alias runtest)
 (action (run ./test_global_var.exe)))

(rule
 (alias runtest)
 (action (run ./test_function_validation.exe)))

(rule
 (alias runtest)
 (action (run ./test_tail_call.exe)))

(rule
 (alias runtest)
 (action (run ./test_context_field_types.exe)))

(rule
 (alias runtest)
 (action (run ./test_named_returns.exe)))

(rule
 (alias runtest)
 (action (run ./test_import_system.exe)))

(rule
 (alias runtest)
 (action (run ./test_tracepoint.exe)))

(rule
 (alias runtest)
 (action (run ./test_probe.exe)))

(rule
 (alias runtest)
 (action (run ./test_detach_api.exe)))

(rule
 (alias runtest)
 (action (run ./test_perf_event_attach.exe)))

(rule
 (alias runtest)
 (action (run ./test_tc.exe)))

(rule
 (alias runtest)
 (action (run ./test_exec.exe)))

(rule
 (alias runtest)
 (action (run ./test_void_functions.exe)))

(rule
 (alias runtest)
 (action (run ./test_definition_order.exe)))

(rule
 (alias runtest)
 (action (run ./test_sysctl.exe)))
